# fusetools

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  JOURNAL.md  LICENSE  Makefile  install.sh  pyproject.toml  readme.md  requirements.txt  rtd_dtl.json  rtd_dtl_up.json  setup.py
.github/workflows/: ci.yml  python-publish.yml  release.yml
docs/: Makefile  readme.md  requirements.txt
docs/source/: conf.py  examples.rst  index.rst  introduction.rst
docs/source/_autosummary/: fusetools.analytics_tools.Pandas.rst  fusetools.cloud_tools.AWS.rst  fusetools.cloud_tools.rst  fusetools.comm_tools.SendGrid.rst  fusetools.comm_tools.WhatsApp.rst  fusetools.commerce_tools.Discogs.rst  fusetools.date_tools.get_last_dow.rst  fusetools.date_tools.get_rptg_mon.rst  fusetools.date_tools.get_rptg_qtr.rst  fusetools.date_tools.get_rptg_week.rst  fusetools.date_tools.rst  fusetools.db_conn_tools.Redshift.rst  fusetools.db_conn_tools.rst  fusetools.db_etl_tools.Oracle.rst  fusetools.db_etl_tools.Postgres.rst  fusetools.db_etl_tools.rst  fusetools.devops_tools.Local.rst  fusetools.devops_tools.PyPi.rst  fusetools.devops_tools.rst  fusetools.financial_tools.Misc.rst  fusetools.financial_tools.Quotes.rst  fusetools.financial_tools.rst  fusetools.gsuite_tools.GDrive.rst  fusetools.gsuite_tools.GMail.rst  fusetools.gsuite_tools.GSheets.rst  fusetools.job_tools.Upwork.rst  fusetools.job_tools.rst  fusetools.logging_tools.ThreadFilter.rst  fusetools.logging_tools.log_all.rst  fusetools.ml_tools.rst  (+63 more)
examples/: cloud_tools - AWS.ipynb  cloud_tools - Firebase.ipynb  comm_tools.ipynb  db_etl_tools.ipynb  gsuite_tools.ipynb
fusetools/: __init__.py  accounting_tools.py  analytics_tools.py  cloud_tools.py  comm_tools.py  commerce_tools.py  dashboard_tools.py  date_tools.py  db_conn_tools.py  db_etl_tools.py  db_tools.py  devops_tools.py  financial_tools.py  gsuite_tools.py  home_tools.py  job_tools.py  logging_tools.py  marketing_tools.py  ml_tools.py  music_tools.py  office_tools.py  pm_tools.py  requirements.txt  research_tools.py  screen_tools.py  social_tools.py  stat_tools.py  text_tools.py  transfer_tools.py  web_tools.py
fusetools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/integration_tests/: test_cloud_tools.py  test_db_tools.py
tests/unit_tests/: test_cloud_tools.py  test_db_tools.py  test_gsuite_tools.py  test_logging_tools.py  test_transfer_tools.py
